<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_forecast"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_forecast"
            android:checked="true" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/nav_map"
            android:checked="true" />
        <item
            android:id="@+id/nav_logs"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_logs"
            android:checked="true" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_settings"
            android:checked="true" />

        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_about"
            android:checked="true" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/nav_exit" />
    </group>

</menu>